...
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        app:cardCornerRadius="6dp"
        app:layout_constraintBottom_toTopOf="@id/button_add_destination"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_view_compass">

        <RelativeLayout
            android:layout_width="wrap_content"
...
                android:layout_margin="8dp"
                android:layout_toEndOf="@id/image_icon_pin_destination"
                android:gravity="center"
                android:text="@string/distance_to_destination" />

            <TextView
                android:id="@+id/text_view_destination_coordinates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/text_view_distance_destination"
                android:layout_toEndOf="@id/text_view_distance_destination"
                android:text=""
                android:textColor="@color/light_blue"
...
